fix: Hero subtitle on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -298,6 +298,10 @@
 /* ! MEDIA QUERIES */
 
 @media (max-width: 900px) {
+	.heroSubtitle{
+		flex: 2.5;
+	}
+
 	.sobreContent {
 		flex-direction: column-reverse;
 	}
